# 30DaysOfFLCode

./: 30daysFLschedule.md  30daysFLschedule_blank.md  README.md
code/: datasets.md  federated_learning_frameworks.md
code/clamp/: create_dataset_partition.py
code/clamp/clamp/: README.md  pyproject.toml
code/clamp/clamp/clamp/: .~lock.ClaMP_Integrated-5184.csv#  __init__.py  client_app.py  create_dataset_partition.py  server_app.py  task.py
code/concreteML/: example1.py  example2.py
code/concreteML/.artifacts/: environment.txt  inference_to_compile.1.initial.graph.txt  inference_to_compile.2.final.graph.txt  inference_to_compile.parameters.txt  mlir.txt  requirements.txt  traceback.txt
code/privacyML-udacity/: privateML-udactity.ipynb
days/: 1.md  daily_post_link.md
resources/: links.md
resources/researchpapers/: papers.md
