[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clamp"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "scikit-learn>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ajit"

[tool.flwr.app.components]
serverapp = "clamp.server_app:app"
clientapp = "clamp.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
penalty = "l2"
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
